   Removed unused colour parsing functions.
   Let the colour chooser pick the colour under the cursor.
 * data/filetypes.*, src/highlighting.c, src/utils.c:
   Fixed bug in parsing strings containing hex values, modified the
   styles to keep the syntax highlighting consistent.
 * src/main.c: Removed startup warning.
 * src/geany.h, src/main.c: Added Select All item to sensitive buttons.


2006-07-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/Makefile.am: Added target to remove geany_res.res when cleaning.
 * src/geany.h, src/main.c, src/callbacks.c, src/highlighting.c,
   src/document.c, src/dialogs.c, src/prefs.c, src/utils.c,
   src/win32.c, src/keybindings.c, src/gb.c, src/about.c:
   Removed macro GEANY_WIN32, use G_OS_WIN32 instead.
   Introduced global variables for PACKAGE_DATA_DIR and
   PACKAGE_LOCALE_DIR, removed macro DOCDIR
   (these changes are important for the Windows port).


2006-07-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/win32.c: Don't add .c extension for All files filter.
                Only set open tool dialog path if it exists.
 * src/keybindings.c: Use CTRL-SHIFT-space for Windows show calltips.
 * src/prefs.c: Never show compile & run toolbuttons on Windows and
                hide the prefs option to show them.
 * src/main.c: Disable the Compiler tab instead of hiding it so that
               messages window tabs have the right index on switching.
 * src/utils.c: Only replace untitled.x within the first 2 lines.


2006-07-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/encodings.c, src/document.c, src/keyfile.c, src/main.c:
   Save default encoding for new files as charset string.
 * src/filetypes.c: Reordered the filetypes (just a cosmetic change).
 * src/win32.c, src/utils.c:
   Removed title argument from win32_message_dialog because it is
   defined by the dialog type.
   Added simple wrapper function win32_open_browser().
 * src/dialogs.c, src/main.c, src/document.c, src/callbacks.c: