@@ -1454,6 +1454,9 @@ on_show_color_chooser1_activate        (GtkMenuItem     *menuitem,
 	gint idx = document_get_cur_idx();
 	gint pos = sci_get_current_position(doc_list[idx].sci);
 
+	if (idx == -1 || ! doc_list[idx].is_valid)
+		return;
+
 	utils_find_current_word(doc_list[idx].sci, pos, colour, sizeof colour);
 	dialogs_show_color(colour);
 }
